--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 		</div>
 	</nav>
 
+<div class="Fon"></div>
 
 	<div class="TitleHeader">
 	Learn JavaScript from Top 50 Articles for the Past Year (v.2019)
@@ -76,7 +77,7 @@
 	<div class="Text">
 	<p class="Main">
 	Between Jan~Dec 2018, we’ve compared nearly 24,000 JavaScript  articles to pick the Top 50 that can improve your web development skill for 2019.<br>
-This is an extremely competitive list (50/24,000 or 0.21% chance), and carefully picks the most useful JavaScript articles published for the past year. <a class="Info" href="https://medium.mybridge.co/">Mybridge AI</a> evaluates the quality by considering popularity, engagement and recency, and other human factors.<br>
+This is an extremely competitive list (50/24,000 or 0.21% chance), and carefully picks the most useful JavaScript articles published for the past year. <a class="Link2" href="https://medium.mybridge.co/">Mybridge AI</a> evaluates the quality by considering popularity, engagement and recency, and other human factors.<br>
 Tutorials are divided into 17 relevant groups (see below).
 </p>
 </div>
